--- a/pom.xml
+++ b/pom.xml
@@ -32,20 +32,18 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->
 		
 		
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<!--<dependency>
+		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>8.0.30</version>
 		</dependency>
-		-->
 		<dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
