--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<scope>runtime</scope>
 		</dependency>-->
 		
+		<dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+		
 		
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
